--- a/MiniProject.slides.html
+++ b/MiniProject.slides.html
@@ -3434,6 +3434,23 @@ SUVORK5CYII=
 </div>
 </div>
 </div></section>
+    </section><section>
+    <section>
+    
+<div class="cell border-box-sizing text_cell rendered">
+<div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Conclusie:">Conclusie:<a class="anchor-link" href="#Conclusie:">&#182;</a></h2><p>Duidelijk aangegeven welke woorden het belangrijkst waren.</p>
+<p><p>
+Verschuiving in inhoud van troonredes: vergadering ---&gt; samenlevingsgericht</p>
+<p><p>
+Niet elke periode is volledig representatief vanwege missende data.</p>
+
+</div>
+</div>
+</div></section>
     </section>
 </div>
 </div>
